
install( FILES kinfocentercategory.desktop DESTINATION  ${KDE_INSTALL_KSERVICETYPES5DIR} )

install( FILES deviceinfocategory.desktop graphicalinfocategory.desktop networkinfocategory.desktop lostfoundcategory.desktop basicinformation.desktop detailedinformation.desktop
         DESTINATION  ${KDE_INSTALL_KSERVICES5DIR} )
