# SPDX-License-Identifier: BSD-3-Clause
# SPDX-FileCopyrightText: 2021 Harald Sitter <sitter@kde.org>

find_package(lscpu)
set_package_properties(lscpu PROPERTIES TYPE RUNTIME)

add_definitions(-DTRANSLATION_DOMAIN=\"kcm_cpu\")

kinfocenter_add_kcm(kcm_cpu main.cpp)
target_link_libraries(kcm_cpu KF6::CoreAddons KF6::KCMUtilsQuick KF6::I18n KInfoCenterInternal)
